--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ body{
     position: relative;
     width: 100%;
     height: 100vh;
-    background:url(../img/1.jpg);
+    background:url(../img/black.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
